# webrpc

./: .gitignore  CMakeLists.txt  README.md  vix.json
.github/workflows/: webrpc-strict-ci.yml
examples/: 01_basic_request.cpp  02_router_dispatch.cpp  03_notification.cpp  04_batch_requests.cpp  CMakeLists.txt  run_all.cpp
include/vix/webrpc/: Context.hpp  Dispatcher.hpp  Error.hpp  Request.hpp  Response.hpp  Router.hpp  webrpc.hpp
tests/: CMakeLists.txt  error_serialization.cpp  router_basic.cpp
